--- a/Act1.html
+++ b/Act1.html
@@ -102,7 +102,7 @@
                 }
 
                 if(emailError || passwordError){
-                    var errorMessage;
+                    var errorMessage = "";
                     document.getElementById("capa").style.display = "inherit";
                     if(emailError){
                         errorMessage = "El email no es válido. ";
