--- a/Act2.5.2.html
+++ b/Act2.5.2.html
@@ -85,13 +85,8 @@
             });
 
             function check(){
-                var email = $(document).ready(function(){
-                    $(".emailInput").text();
-                    //Corregir
-                });
-                var password = $(document).ready(function(){
-                    $(".passwordInput").value;
-                });
+                var email = $("#emailInput").val();
+                var password = $("#passwordInput").val();
 
                 var emailText = String(email);
                 var passwordText = String(password);
