--- a/Actividad1/Act2.5.1.html
+++ b/Actividad1/Act2.5.1.html
@@ -4,48 +4,6 @@
         <title>2.5.1</title>
         <link href="ibs.css" media="all" rel="stylesheet" type="text/css" />
         <script src="js/jquery-3.6.0.js"></script>
-        <style>
-            body{
-                margin:0;
-            }
-            .t1{
-                width: 790px; 
-                height: 500px;
-                background-color: #F2EBD9; 
-                border: 1px solid; 
-                border-color: #003281;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                position: relative;
-                z-index: 0;
-            }
-
-            .t2{
-                border: 1px solid;
-                border-color: black;
-                background-color: #003281;
-                z-index: 1;
-            }
-            .text{
-                color: white;
-            }
-            .capa{
-                width: 790px; 
-                height: 500px;
-                text-align: center;
-                background-color: white;
-                background-size: auto;
-                color: red;
-                border: 1px solid;
-                border-color: red;
-                top: 0;
-                left: 0;
-                position: absolute;
-                z-index: 2;
-                display: none;
-            }
-        </style>
     </head>
     <body>
         <div class="t1">
@@ -73,7 +31,7 @@
             </table>
             
         </div>
-        <div class="capa" id="capa">
+        <div class="capaerror" id="capaerror">
             <p class="smallrojo" id="errorMessage"></p>
         </div>
         <script>
