--- a/Actividad1/Act2.5.2.html
+++ b/Actividad1/Act2.5.2.html
@@ -4,48 +4,6 @@
         <title>2.5.2</title>
         <link href="ibs.css" media="all" rel="stylesheet" type="text/css" />
         <script src="js/jquery-3.6.0.js"></script>
-        <style>
-            body{
-                margin:0;
-            }
-            .t1{
-                width: 790px; 
-                height: 500px;
-                background-color: #F2EBD9; 
-                border: 1px solid; 
-                border-color: #003281;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                position: relative;
-                z-index: 0;
-            }
-
-            .t2{
-                border: 1px solid;
-                border-color: black;
-                background-color: #003281;
-                z-index: 1;
-            }
-            .text{
-                color: white;
-            }
-            .capa{
-                width: 790px; 
-                height: 500px;
-                text-align: center;
-                background-color: white;
-                background-size: auto;
-                color: red;
-                border: 1px solid;
-                border-color: red;
-                top: 0;
-                left: 0;
-                position: absolute;
-                z-index: 2;
-                display: none;
-            }
-        </style>
     </head>
     <body>
         <div class="t1">
@@ -73,7 +31,7 @@
             </table>
             
         </div>
-        <div class="capa" id="capa">
+        <div class="capaerror" id="capaerror">
             <p class="smallrojo" id="errorMessage"></p>
         </div>
 
@@ -85,13 +43,11 @@
             });
 
             function check(){
-                var email = $("#emailInput").val();
-                var password = $("#passwordInput").val();
+                const email = $("#emailInput").val();
+                const password = $("#passwordInput").val();
 
-                var emailText = String(email);
-                var passwordText = String(password);
-
-                console.log(emailText);
+                const emailText = String(email);
+                const passwordText = String(password);
 
                 var emailError = false;
                 var passwordError = false;
@@ -107,7 +63,7 @@
                 if(emailError || passwordError){
                     var errorMessage = "";
                     $(document).ready(function(){
-                        $(".capa").css("display", "inherit");
+                        $(".capaerror").css("display", "inherit");
                     });
 
                     if(emailError){
