--- a/Actividad1/Act2.5.4.html
+++ b/Actividad1/Act2.5.4.html
@@ -4,49 +4,6 @@
         <title>2_5_4</title>
         <link href="ibs.css" media="all" rel="stylesheet" type="text/css" />
         <script src="js/jquery-3.6.0.js"></script>
-        <style>
-            .container{
-                display: block;
-                position: relative;
-            }
-            .block{
-                width: 30%;
-                display: block;
-                margin-top: 20px;
-                margin-left: auto;
-                margin-right: auto;
-                border: 1px solid;
-                position: relative;
-                text-align: center;
-            }
-            .capa1{
-                width: 80%;
-                height: 50%;
-                margin-top: 20px;
-                padding: 10% 10%;
-                border: 1px solid black;
-                display: block;
-                position: relative;
-            }
-            .capa2{
-                width: 100%;
-                height: 50%;
-                border: 1px solid blue;
-                display: block;
-                position: absolute;
-                top: 0;
-                left: 0;
-            }
-            .capa3{
-                width: 100%;
-                height: 50%;
-                border: 1px solid red;
-                display: none;
-                position: absolute;
-                top: 50%;
-                left: 0;
-            }
-        </style>
     </head>
     <body>
         <div class="container">
@@ -119,7 +76,7 @@
             });
 
             $("#boton2").click(function(){
-                var radios = $("input:radio[name=radio]");
+                const radios = $("input:radio[name=radio]");
                 var str = "";
 
                 for(var i = 0; i < radios.length; i++){
@@ -146,7 +103,7 @@
             });
 
             $("#marcas").dblclick(function(){
-                option = $("#marcas").find("option:selected");
+                var option = $("#marcas").find("option:selected");
                 $("#marcas").remove(option);
                 $("#marcas2").append(option);
             });
