hotfix: Cambios let y foreach
Cambio de las variables (var -> let)
Cambios en los bucles

Resolve: #4

--- a/Actividad1/Act1.html
+++ b/Actividad1/Act1.html
@@ -46,8 +46,8 @@
                 const emailText = String(email);
                 const passwordText = String(password);
 
-                var emailError = false;
-                var passwordError = false;
+                let emailError = false;
+                let passwordError = false;
 
                 if(!emailText.includes("@") || !emailText.includes(".") || emailText.length < 6){
                     emailError = true;
@@ -58,7 +58,7 @@
                 }
 
                 if(emailError || passwordError){
-                    var errorMessage = "";
+                    let errorMessage = "";
                     document.getElementById("capaerror").style.display = "inherit";
                     if(emailError){
                         errorMessage = "El email no es válido. ";
